Update setup to include wsl and cygwin interaction via x server

--- a/setup.org
+++ b/setup.org
@@ -277,6 +277,96 @@ asoundconf list # Note value returned was PCH
 asoundconf set-default-card PCH
 #+end_src
 
+* Cygwin X server
+Note all of this data originates from [[https://github.com/hubisan/emacs-wsl][Hubisan's github]]. This is for offline viewing only.
+** Install Ubuntu through wsl
+*** WSL
+**** Install WSL
+#+begin_src ps
+wsl --install
+#+end_src
+
+**** Enable WSL via powershell
+#+begin_src ps
+Enable-WindowsOptionalFeature -Online -FeatureName Microsoft-Windows-Subsystem-Linux
+#+end_src
+
+*** Ubuntu
+**** Download Ubuntu distro via powershell
+#+begin_src ps
+Invoke-WebRequest -Uri https://aka.ms/wsl-ubuntu-2004 -OutFile Ubuntu.appx -UseBasicParsing
+#+end_src
+
+**** Install Ubuntu distro
+#+begin_src shell
+Add-AppxPackage .\Ubuntu.appx
+#+end_src
+
+*** Emacs
+**** Dependencies
+#+begin_src shell
+sudo apt install -y autoconf automake autotools-dev bsd-mailx build-essential \
+    diffstat gnutls-dev imagemagick libasound2-dev libc6-dev libdatrie-dev \
+    libdbus-1-dev libgconf2-dev libgif-dev libgnutls28-dev libgpm-dev libgtk2.0-dev \
+    libgtk-3-dev libice-dev libjpeg-dev liblockfile-dev liblqr-1-0 libm17n-dev \
+    libmagickwand-dev libncurses5-dev libncurses-dev libotf-dev libpng-dev \
+    librsvg2-dev libsm-dev libthai-dev libtiff5-dev libtiff-dev libtinfo-dev libtool \
+    libx11-dev libxext-dev libxi-dev libxml2-dev libxmu-dev libxmuu-dev libxpm-dev \
+    libxrandr-dev libxt-dev libxtst-dev libxv-dev quilt sharutils texinfo xaw3dg \
+    xaw3dg-dev xorg-dev xutils-dev zlib1g-dev libjansson-dev libxaw7-dev \
+    libselinux1-dev libmagick++-dev libacl1-dev gir1.2-javascriptcoregtk-4.0 \
+    gir1.2-webkit2-4.0 libenchant1c2a libglvnd-core-dev libicu-le-hb-dev \
+    libidn2-0-dev libjavascriptcoregtk-4.0-dev liboss4-salsa2 libsoup2.4-dev \
+    libsystemd-dev libwebkit2gtk-4.0-dev libx11-xcb-dev libxcb-dri2-0-dev \
+    libxcb-dri3-dev libxcb-glx0-dev libxcb-present-dev libxshmfence-dev \
+    x11proto-composite-dev x11proto-core-dev x11proto-damage-dev \
+    x11proto-fixes-dev
+#+end_src
+
+**** Download/Install Emacs
+#+begin_src shell
+cd ~
+wget https://ftp.gnu.org/pub/gnu/emacs/emacs-27.1.tar.gz
+tar -xzvf emacs-27.1.tar.gz
+cd emacs-27.1
+./configure
+make
+sudo make install
+rm ~/emacs-27.1.tar.gz
+#+end_src
+
+*** Cygwin
+Note: Always install cygwin from their website (https://cygwin.com/install.html)
+**** During Cygwin install, include the following packages:
+=xorg-server=
+=xinit=
+=xlaunch=
+
+**** Executing XLaunch
+Run xlaunch via cygwin, use defaults where applicable:
+- Multiple Windows, Display number -1, Next
+- Start no client, Next
+- Leave checkboxes, Additional parameters for X server: =-listen tcp=, Next
+- Finish
+
+Note: Can create shortcut that contains the following target:
+#+begin_src
+C:\Cygwin\run.exe -quote /usr/bin/bash.exe -l c "XWin :0 -listen tcp -multiwindow -clipboard -wgl"
+#+end_src
+
+**** Add this alias to bashrc
+#+begin_src shell
+alias eme='
+export DISPLAY=:0.0
+export LIBGL_ALWAYS_INDIRECT=1
+setxkbmap -layout us
+setsid emacs
+exit
+'
+#+end_src
+
+Run emacs with above alias =eme=
+
 * Polybar
 
 ** Auto execute script
