Added scripts, additional splitting, noweb

--- a/init.org
+++ b/init.org
@@ -1,5 +1,5 @@
 #+title Emacs Scratch Config
-#+PROPERTY: header-args:emacs-lisp :tangle ./init.el
+#+PROPERTY: header-args:emacs-lisp :tangle ./.emacs.d/init.el :mkdirp yes
 
 * General Setup
 ** Package Repos
@@ -260,7 +260,6 @@ p  :config
 
 #+end_src
 
-
 *** Don't Notify Execution
 #+begin_src emacs-lisp
 (setq org-confirm-babel-evaluate nil)
@@ -280,8 +279,8 @@ p  :config
 
 ;; Automatically tangle our init.org config file when we save it
 (defun efs/org-babel-tangle-config ()
-  (when (string-equal (buffer-file-name)
-                      (expand-file-name "~/proj/dotfiles/init.org"))
+  (when (string-equal (file-name-directory (buffer-file-name))
+                      (expand-file-name "~/proj/dotfiles/"))
     ;; Dynamic scoping to the rescue
     (let ((org-confirm-babel-evaluate nil))
       (org-babel-tangle))))
@@ -343,7 +342,7 @@ p  :config
 #+end_src
 
 * EXWM
-
+*** Initial EXWM setup
 #+begin_src emacs-lisp :tangle ./.emacs.d/exwm.el
 (defun efs/exwm-update-class ()
   (exwm-workspace-rename-buffer exwm-class-name))
@@ -355,6 +354,11 @@ p  :config
   :config
   ;; Set the default number of workspaces
   (setq exwm-workspace-number 5)
+
+  ;; When running a program in a buffer, set buffer name to program name
+  (add-hook 'exwm-update-class-hook #'efs/exwm-update-class)
+
+  ;; These keys escape the EXWM process and get handed to emacs
   (setq exwm-input-prefix-keys
 	'(?\C-x
 	  ?\C-u
@@ -365,40 +369,53 @@ p  :config
 	  ?\M-:
 	  ?\C-\M-j
 	  ?\C-\ ))
+
+  ;; These keys bypass the escape keys above, allowing you to pass to EXWM instead
   (define-key exwm-mode-map [?\C-q] 'exwm-input-send-next-key)
+
+  ;; Give me a system tray!
+  (require 'exwm-systemtray)
+  (exwm-systemtray-enable)
+
+  ;; These are global EXWM keys to set
   (setq exwm-input-global-keys
 	`(
 	  ([?\s-r] . exwm-reset)
+    ;; Navigate windows
 	  ([s-left] . windmove-left)
 	  ([s-right] . windmove-right)
 	  ([s-up] . windmove-up)
 	  ([s-down] . windmove-down)
-        ([s-f] . exwm-layout-toggle-fullscreen)
-
+    ;; Fullscreen programs. TODO: Apply to normal buffers too.
+    ([?\s-f] . exwm-layout-toggle-fullscreen)
+    ;; Allows interactive program list to start up
 	  ([?\s-&] . (lambda (command)
 		       (interactive (list (read-shell-command "$ ")))
-		       (start-process-shell-command command nill command)))
-
+		       (start-process-shell-command command nil command)))
+    ;; Prompts the user to select workspace
 	  ([?\s-w] . exwm-workspace-switch)
-
+    ;; Press s-# to get the workspace necessary
 	  ,@(mapcar (lambda (i)
 		      `(,(kbd (format "s-%d" i)) .
 			(lambda ()
 			  (interactive)
 			  (exwm-workspace-switch-create ,i))))
-		    (number-sequence 0 9))))
-  
-  (exwm-enable))
+		    (number-sequence 0 9)))))
 #+end_src
 
+*** Split EXWM config out in Main
 #+begin_src emacs-lisp
-(setq efs/exwm-enabled (and (eq window-system 'x)
-                            (seq-contains-p command-line-args "--use-exwm")))
+(setq efs/exwm-enabled (and (eq window-system 'x)))
+;                            (seq-contains-p command-line-args "--use-exwm")))
 
 (when efs/exwm-enabled
   (load-file "~/.emacs.d/exwm.el"))
 #+end_src
 
+*** Finally, enable EXWM
+#+begin_src emacs-lisp :tangle ./.emacs.d/exwm.el
+(exwm-enable)
+#+end_src
 * Misc
 ** Command Log Mode
 #+begin_src emacs-lisp
