Config changes that include appropriate config split

--- a/exwm.org
+++ b/exwm.org
@@ -9,7 +9,7 @@
 (expand-file-name "~")
 #+end_src
 
-** EXWM Configuration
+** Supporting Files
 *** Desktop file
 Used for EXWM to tell GDM that it is available as a window manager.
 This will need linked into the =/usr/share/xsessions/EXWM.desktop= file.
@@ -31,4 +31,98 @@ NOTE: Add =--use-exwm= to exwm-enabled function so we can toggle
 #!/bin/sh
 
 exec dbus-launch --exit-with-session emacs -mm --debug-init
+#+end_src
+
+** EXWM Functions
+These scripts are used inside of the exwm config block prior to enabling EXWM.
+#+begin_src emacs-lisp :tangle ./.emacs.d/exwm.el
+
+;; Runs a script in the background
+(defun efs/run-in-background (command)
+  (let ((command-parts (split-string command "[ ]+")))
+    (apply #'call-process `(,(car command-parts) nil 0 nil ,@(cdr command-parts)))))
+
+(defun efs/exwm-init-hook ()
+  ;; Make workspace 1 be the one where we land at startup
+  (exwm-workspace-switch-create 1)
+
+;; Open eshell by default
+(eshell)
+
+;; On status bar, add network status
+(efs/run-in-background "nm-applet")
+;; On status bar, add battery status
+(efs/run-in-background "cbatticon"))
+
+
+
+#+end_src
+
+** Initialization (use-package)
+#+begin_src emacs-lisp :tangle ./.emacs.d/exwm.el
+(defun efs/exwm-update-class ()
+  (exwm-workspace-rename-buffer exwm-class-name))
+
+(use-package exwm
+;  :init
+;  (require 'exwm-systemtray)
+;  (exwm-systemtray-enable) 
+  :config
+  ;; Set the default number of workspaces
+  (setq exwm-workspace-number 5)
+
+  ;; When running a program in a buffer, set buffer name to program name
+  (add-hook 'exwm-update-class-hook #'efs/exwm-update-class)
+  
+  ;; When EXWM loads up, load our init hook from exwm.org
+  (add-hook 'exwm-init-hook #'efs/exwm-init-hook)
+
+  ;; These keys escape the EXWM process and get handed to emacs
+  (setq exwm-input-prefix-keys
+	'(?\C-x
+	  ?\C-u
+	  ?\C-h
+	  ?\M-x
+	  ?\M-`
+	  ?\M-&
+	  ?\M-:
+	  ?\C-\M-j
+	  ?\C-\ ))
+
+  ;; These keys bypass the escape keys above, allowing you to pass to EXWM instead
+  (define-key exwm-mode-map [?\C-q] 'exwm-input-send-next-key)
+
+  ;; Give me a system tray!
+  (require 'exwm-systemtray)
+  (exwm-systemtray-enable)
+
+  ;; These are global EXWM keys to set
+  (setq exwm-input-global-keys
+	`(
+	  ([?\s-r] . exwm-reset)
+    ;; Navigate windows
+	  ([s-left] . windmove-left)
+	  ([s-right] . windmove-right)
+	  ([s-up] . windmove-up)
+	  ([s-down] . windmove-down)
+    ;; Fullscreen programs. TODO: Apply to normal buffers too.
+    ([?\s-f] . exwm-layout-toggle-fullscreen)
+    ;; Allows interactive program list to start up
+	  ([?\s-&] . (lambda (command)
+		       (interactive (list (read-shell-command "$ ")))
+		       (start-process-shell-command command nil command)))
+    ;; Prompts the user to select workspace
+	  ([?\s-w] . exwm-workspace-switch)
+    ;; Press s-# to get the workspace necessary
+	  ,@(mapcar (lambda (i)
+		      `(,(kbd (format "s-%d" i)) .
+			(lambda ()
+			  (interactive)
+			  (exwm-workspace-switch-create ,i))))
+		    (number-sequence 0 9)))))
+#+end_src
+
+** Finally, enable EXWM
+#+begin_src emacs-lisp :tangle ./.emacs.d/exwm.el
+(exwm-enable)
 #+end_src
