--- a/exwm.org
+++ b/exwm.org
@@ -30,7 +30,9 @@ NOTE: Add =--use-exwm= to exwm-enabled function so we can toggle
 #+begin_src shell :tangle ./scripts/start-exwm.sh
 #!/bin/sh
 
-exec dbus-launch --exit-with-session emacs -mm --debug-init
+compton &
+
+exec dbus-launch --exit-with-session emacs -mm --debug-init --use-exwm
 #+end_src
 
 ** EXWM Functions
@@ -49,13 +51,28 @@ These scripts are used inside of the exwm config block prior to enabling EXWM.
 ;; Open eshell by default
 (eshell)
 
+;; Show battery status in the mode line
+(display-battery-mode 1)
+
+;; Show date and time in modeline
+(setq display-time-day-and-date t)
+(display-time-mode 1) ;; Note, you can use format-time-string param to config
+
 ;; On status bar, add network status
 (efs/run-in-background "nm-applet")
 ;; On status bar, add battery status
-(efs/run-in-background "cbatticon"))
+;;(efs/run-in-background "cbatticon")
+;; On status bar, add volume
+(efs/run-in-background "pasystray")
+;; On status bar, add bluetooth controls
+(efs/run-in-background "blueman-applet"))
 
-
-
+#+end_src
+*** Set my wallpaper
+#+begin_src emacs-lisp
+(defun efs/set-wallpaper ()
+  (interactive)
+  (start-process-shell-command "feh" nil "feh --bg-scale /usr/share/backgrounds/qwe_download.jpg"))
 #+end_src
 
 ** Initialization (use-package)
@@ -77,6 +94,9 @@ These scripts are used inside of the exwm config block prior to enabling EXWM.
   ;; When EXWM loads up, load our init hook from exwm.org
   (add-hook 'exwm-init-hook #'efs/exwm-init-hook)
 
+  ;; Set wallpaper AFTER changing resolution
+  (efs/set-wallpaper)
+
   ;; These keys escape the EXWM process and get handed to emacs
   (setq exwm-input-prefix-keys
 	'(?\C-x
@@ -94,6 +114,7 @@ These scripts are used inside of the exwm config block prior to enabling EXWM.
 
   ;; Give me a system tray!
   (require 'exwm-systemtray)
+  (setq exwm-systemtray-height 16)
   (exwm-systemtray-enable)
 
   ;; These are global EXWM keys to set
@@ -119,10 +140,36 @@ These scripts are used inside of the exwm config block prior to enabling EXWM.
 			(lambda ()
 			  (interactive)
 			  (exwm-workspace-switch-create ,i))))
-		    (number-sequence 0 9)))))
+		    (number-sequence 0 9))))
+  (exwm-input-set-key (kbd "s-SPC") 'counsel-linux-app))
 #+end_src
 
 ** Finally, enable EXWM
 #+begin_src emacs-lisp :tangle ./.emacs.d/exwm.el
 (exwm-enable)
+#+end_src
+
+* Desktop Environment
+** Set up use-package
+#+begin_src emacs-lisp
+(use-package desktop-environment
+  :after exwm
+  :config (desktop-environment-mode)
+  :custom
+  (desktop-environment-brightness-small-increment "2%+")
+  (desktop-environment-brightness-small-decrement "2%-")
+  (desktop-environment-brightness-normal-increment "5%+")
+  (desktop-environment-brightness-normal-decrement "5%-"))
+#+end_src
+
+* Cool tools to install
+#+begin_src shell
+scrot # Screenshot tool
+brightnessctl
+playerctl # Media
+blueman # Bluetooth controls
+pasystray
+pavucontrol # PulseAudio Volume Controls
+
+sudo pacman -S playerctl blueman pasystray pavucontrol
 #+end_src
