--- a/init.org
+++ b/init.org
@@ -91,19 +91,49 @@
 
 * File Management
 ** Dired
+*** Dired setup
 #+begin_src emacs-lisp
+
+;(use-package dired-single)
 
 (use-package dired
   :ensure nil
   :commands (dired dired-jump)
   :bind (("C-x C-j" . dired-jump)
     :map dired-mode-map
+;;      (("C-b" . dired-single-up-directory)
+;;      ("C-f" . dired-single-buffer)))
       (("C-b" . dired-up-directory)
       ("C-f" . dired-find-file)))
   :custom ((dired-listing-switches "-agho --group-directories-first")))
 
 #+end_src
+TODO: Move to a note file outside of config
+
+*** Dired icons
+#+begin_src emacs-lisp
+(use-package all-the-icons-dired
+  :hook (dired-mode . all-the-icons-dired-mode))
+#+end_src
+
+*** dired-open
+#+begin_src emacs-lisp
+  (use-package dired-open
+    :config
+    (setq dired-open-extensions '(("png" . "feh")
+                                  ("mkv" . "mpv"))))
+#+end_src
+
+*** Hide my hidden files on-demand
+#+begin_src emacs-lisp
+(use-package dired-hide-dotfiles
+  :hook (dired-mode . dired-hide-dotfiles-mode)
+  :bind
+  (")" . dired-hide-dotfiles-mode))
+#+end_src
+
 *** Dired Notes
+**** General
 - =m= Marks a file
 - =u= Unmarks a file
 - =U= Unmarks all files
@@ -113,7 +143,31 @@
 - =*/= Marks directories
 - =k= Hides marked lines
 - =g= Restores killed lines
+
+**** Copy/Rename
 - =R= Similar to MV (can rename or move)
+- =c= Copy marked files
+- =% r= Renames with regex
+
+**** Deleting
+- =D= Deletes marked file
+- =d= Mark file for deletion
+- =x= Execute deletion for marks
+- =delete-by-moving-to-trash= Allows restore of delete
+
+**** Archives
+- =Z= Compress a file/folder to =.tar.gz=
+- =c= Compress selection to specific file
+- =dired-compress-files-alist= Binds compression commands to file extension
+
+**** Other
+- =T= Touch (change timestamp)
+- =M= Change file mode
+- =o= Change file owner
+- =G= Change file Group
+- =S= Creates symlink
+- =L= load elisp file into emacs
+- =C-x C-q= Allows filename editing directly in buffer
 * Searching
 ** Ivy
 *** Base
@@ -308,6 +362,11 @@ p  :config
 (add-to-list 'org-structure-template-alist '("sh" . "src shell"))
 (add-to-list 'org-structure-template-alist '("el" . "src emacs-lisp"))
 (add-to-list 'org-structure-template-alist '("py" . "src python"))
+#+end_src
+
+*** Treat code like code
+#+begin_src emacs-lisp
+(setq org-src-tab-acts-natively t)
 #+end_src
 
 ** Tangle
