--- a/init.org
+++ b/init.org
@@ -21,6 +21,9 @@
 
 #+end_src
 
+#+RESULTS:
+: t
+
 
 #+begin_src emacs-lisp
 (setq inhibit-startup-message t)
@@ -370,6 +373,14 @@ p  :config
 (use-package ledger-mode
   :ensure t
   :mode ("\\.journal\\'" . ledger-mode))
+
+;; git clone git@github.com:beancount/beancount-mode
+(add-to-list 'load-path "~/proj/beancount-mode/")
+(require 'beancount)
+(add-to-list 'auto-mode-alist '("\\.beancount\\'" . beancount-mode))
+(add-hook 'beancount-mode-hook
+  (lambda () (setq-local electric-indent-chars nil))
+(add-hook 'beancount-mode-hook #'outline-minor-mode)
 #+end_src
 
 #+begin_src emacs-lisp
